Add PubMed publications page and homepage section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <nav class="site-nav" aria-label="Main navigation">
         <a href="./">Home</a>
         <a href="writing/">Writing</a>
+        <a href="publications/">Publications</a>
         <a href="#research">Research</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -149,6 +150,20 @@
           <a class="read-more" href="writing/why-vaccine-equity-needs-better-data.html">Read article</a>
         </article>
       </div>
+    </section>
+
+    <section class="block">
+      <div class="section-title-row">
+        <h2>Recent Publications</h2>
+        <a href="publications/">View all publications</a>
+      </div>
+      <div class="pub-mini">
+        <p><a href="https://pubmed.ncbi.nlm.nih.gov/41429348/" target="_blank" rel="noopener">Efficacy of susceptibility-matched antibiotic treatment of nontyphoidal Salmonella bloodstream infections <span>(2025)</span></a></p>
+        <p><a href="https://pubmed.ncbi.nlm.nih.gov/41076059/" target="_blank" rel="noopener">Increased risk of neuropsychiatric adverse events with dolutegravir-based ART during pregnancy <span>(2025)</span></a></p>
+        <p><a href="https://pubmed.ncbi.nlm.nih.gov/40961798/" target="_blank" rel="noopener">Longevity of immune-response after one dose of vi-DT vaccine in adults and children <span>(2025)</span></a></p>
+        <p><a href="https://pubmed.ncbi.nlm.nih.gov/40756694/" target="_blank" rel="noopener">Knowledge, attitudes, and practices toward Schistosoma mansoni in Southern Ethiopia <span>(2025)</span></a></p>
+      </div>
+      <p class="pub-source">Source: <a href="https://pubmed.ncbi.nlm.nih.gov/?term=birkneh+tadesse+or+birkneh+tilahun&sort=date" target="_blank" rel="noopener">PubMed search profile</a>.</p>
     </section>
 
     <section class="block" id="contact">
