Add projects page and integrate projects navigation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <nav class="site-nav" aria-label="Main navigation">
         <a href="./">Home</a>
         <a href="writing/">Writing</a>
+        <a href="projects/">Projects</a>
         <a href="publications/">Publications</a>
         <a href="#research">Research</a>
         <a href="#contact">Contact</a>
@@ -126,6 +127,30 @@
         <article>
           <h3>PREGART Clinical Trial</h3>
           <p>Principal Investigator for a randomized non-inferiority HIV treatment trial in pregnancy and breastfeeding.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="block">
+      <div class="section-title-row">
+        <h2>Selected Projects</h2>
+        <a href="projects/">View all projects</a>
+      </div>
+      <div class="project-grid project-grid-compact">
+        <article class="project-card">
+          <h3><a href="projects/#mpox-drc">LC16m8 Mpox Vaccine Effectiveness and Safety (DRC)</a></h3>
+          <p class="project-meta">Scientific and Technical Lead | CEPI | 2025-2028</p>
+          <p>A multicountry effort generating practical evidence on mpox vaccine performance and safety in high-burden settings.</p>
+        </article>
+        <article class="project-card">
+          <h3><a href="projects/#ecova">Expanding Access to COVID-19 Vaccines in Africa (ECOVA)</a></h3>
+          <p class="project-meta">Co-Investigator and Technical Lead | CEPI | 2020-2024</p>
+          <p>Clinical and real-world studies addressing vaccine effectiveness, safety, and research equity gaps across African sites.</p>
+        </article>
+        <article class="project-card">
+          <h3><a href="projects/#pregart">PREGART HIV Trial in Pregnancy and Breastfeeding</a></h3>
+          <p class="project-meta">Principal Investigator | EDCTP2 | 2018-2023</p>
+          <p>Randomized clinical research informing HIV treatment decisions for maternal and neonatal health outcomes.</p>
         </article>
       </div>
     </section>
