--- a/special-areas/equity-vaccine-access.html
+++ b/special-areas/equity-vaccine-access.html
@@ -19,6 +19,7 @@
       <nav class="site-nav" aria-label="Main navigation">
         <a href="../">Home</a>
         <a href="../writing/">Writing</a>
+        <a href="../projects/">Projects</a>
         <a href="../publications/">Publications</a>
         <a href="../#research">Research</a>
         <a href="../#contact">Contact</a>
