Reduce hero headline font size on homepage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero">
       <div>
         <p class="kicker">Global Health | Vaccines | Evidence to Policy</p>
-        <h1>Science for equitable vaccine access and stronger health systems</h1>
+        <h1 class="hero-title">Science for equitable vaccine access and stronger health systems</h1>
         <p class="lead">
           I am an epidemiologist, clinician, and vaccine development leader working at the intersection of
           research, policy, and implementation. My work focuses on generating rigorous clinical evidence
