Move Africa map below special areas and rename heading

--- a/index.html
+++ b/index.html
@@ -99,6 +99,45 @@
       </div>
     </section>
 
+    <section class="block">
+      <div class="map-module">
+        <h3>Why the work in the continent matters</h3>
+        <p class="map-note">
+          Hover to see life expectancy and click a country to keep its value below.
+        </p>
+        <div class="map-layout">
+          <div class="map-canvas">
+            <div id="africa-life-map" role="img" aria-label="Interactive map of life expectancy across African countries"></div>
+            <p id="africa-life-selected" class="map-selected">
+              Hover or click a country on the map.
+            </p>
+          </div>
+          <aside class="map-blurb">
+            <h4>Mortality Context</h4>
+            <p>
+              Life expectancy in Africa is still low, averaging about 64 years across the continent.
+            </p>
+            <p>
+              That is more than a decade lower than other world regions, where life expectancy has
+              largely converged around 75-80 years.
+            </p>
+            <p>
+              While progress has been made over recent decades, this persistent gap reflects overlapping
+              burdens from infectious diseases, maternal and child mortality, and uneven access to
+              essential health services.
+            </p>
+          </aside>
+        </div>
+        <p class="map-source">
+          Source:
+          <a href="https://www.worldometers.info/demographics/life-expectancy/" target="_blank" rel="noopener">
+            Worldometer life expectancy table
+          </a>
+          (values used on February 21, 2026).
+        </p>
+      </div>
+    </section>
+
     <section class="block" id="research">
       <h2>Selected Leadership and Research</h2>
       <div class="timeline">
@@ -188,43 +227,6 @@
           <p>Equity decisions depend on high-quality local evidence. This piece argues for stronger surveillance and analytic capacity where policy decisions are made.</p>
           <a class="read-more" href="writing/why-vaccine-equity-needs-better-data.html">Read article</a>
         </article>
-      </div>
-
-      <div class="map-module">
-        <h3>Interactive Map: Life Expectancy in African Countries</h3>
-        <p class="map-note">
-          Hover to see life expectancy and click a country to keep its value below.
-        </p>
-        <div class="map-layout">
-          <div class="map-canvas">
-            <div id="africa-life-map" role="img" aria-label="Interactive map of life expectancy across African countries"></div>
-            <p id="africa-life-selected" class="map-selected">
-              Hover or click a country on the map.
-            </p>
-          </div>
-          <aside class="map-blurb">
-            <h4>Mortality Context</h4>
-            <p>
-              Life expectancy in Africa is still low, averaging about 64 years across the continent.
-            </p>
-            <p>
-              That is more than a decade lower than other world regions, where life expectancy has
-              largely converged around 75-80 years.
-            </p>
-            <p>
-              While progress has been made over recent decades, this persistent gap reflects overlapping
-              burdens from infectious diseases, maternal and child mortality, and uneven access to
-              essential health services.
-            </p>
-          </aside>
-        </div>
-        <p class="map-source">
-          Source:
-          <a href="https://www.worldometers.info/demographics/life-expectancy/" target="_blank" rel="noopener">
-            Worldometer life expectancy table
-          </a>
-          (values used on February 21, 2026).
-        </p>
       </div>
     </section>
 
